--- a/Appt/Base.lproj/Main.storyboard
+++ b/Appt/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.19" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13156.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.16"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13137.5"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -361,13 +361,13 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hcc-Q5-1Kr">
                                             <rect key="frame" x="93" y="17" width="255" height="20"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="255" id="shD-nh-rxh"/>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="255" id="shD-nh-rxh"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="APm-xs-4d7">
+                                        <imageView hidden="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="APm-xs-4d7">
                                             <rect key="frame" x="43" y="78" width="288" height="2"/>
                                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
@@ -530,7 +530,7 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dateLabel" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d7m-8V-YAw">
                                             <rect key="frame" x="305" y="43" width="56" height="14.5"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="56" id="DHy-zP-T9T"/>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="56" id="DHy-zP-T9T"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
@@ -538,7 +538,8 @@
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="d7m-8V-YAw" firstAttribute="leading" secondItem="5EE-IR-8YS" secondAttribute="trailing" constant="31" id="Ka1-uD-NsH"/>
+                                        <constraint firstItem="d7m-8V-YAw" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="5EE-IR-8YS" secondAttribute="trailing" constant="8" symbolic="YES" id="Ka1-uD-NsH"/>
+                                        <constraint firstAttribute="trailing" secondItem="d7m-8V-YAw" secondAttribute="trailing" constant="14" id="xtn-cz-657"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <constraints>
@@ -660,7 +661,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rqy-It-Fk4">
+                                        <imageView hidden="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rqy-It-Fk4">
                                             <rect key="frame" x="18" y="42" width="338" height="2"/>
                                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
@@ -668,8 +669,8 @@
                                                 <constraint firstAttribute="height" constant="2" id="bBT-tx-hLS"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Patient Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fIO-OW-aAw">
-                                            <rect key="frame" x="37" y="9" width="300" height="25.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Patient Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fIO-OW-aAw">
+                                            <rect key="frame" x="18" y="9" width="320" height="26"/>
                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="21"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -677,8 +678,8 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="fIO-OW-aAw" firstAttribute="centerY" secondItem="axr-xT-jyF" secondAttribute="centerY" id="2ID-fu-gW7"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="fIO-OW-aAw" secondAttribute="trailing" constant="30" id="S3s-b3-K2B"/>
-                                        <constraint firstItem="fIO-OW-aAw" firstAttribute="leading" secondItem="axr-xT-jyF" secondAttribute="leadingMargin" constant="29" id="u8O-kk-FoI"/>
+                                        <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="fIO-OW-aAw" secondAttribute="trailing" constant="29" id="S3s-b3-K2B"/>
+                                        <constraint firstItem="fIO-OW-aAw" firstAttribute="leading" secondItem="axr-xT-jyF" secondAttribute="leadingMargin" constant="10" id="u8O-kk-FoI"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <constraints>
@@ -706,7 +707,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OR2-JH-K1h" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1689" y="358"/>
+            <point key="canvasLocation" x="1688.8" y="357.57121439280365"/>
         </scene>
         <!--Patient DetailTVC-->
         <scene sceneID="ml1-O5-V5B">
@@ -990,7 +991,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Notes" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iKu-3N-w0C">
-                                                    <rect key="frame" x="24" y="20" width="327" height="17"/>
+                                                    <rect key="frame" x="16" y="20" width="335" height="17"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
@@ -998,7 +999,7 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailingMargin" secondItem="iKu-3N-w0C" secondAttribute="trailing" constant="16" id="4HL-lJ-ab5"/>
-                                                <constraint firstItem="iKu-3N-w0C" firstAttribute="leading" secondItem="aR6-c4-vAN" secondAttribute="leadingMargin" constant="16" id="PRc-s4-7Fd"/>
+                                                <constraint firstItem="iKu-3N-w0C" firstAttribute="leading" secondItem="aR6-c4-vAN" secondAttribute="leadingMargin" constant="8" id="PRc-s4-7Fd"/>
                                                 <constraint firstItem="iKu-3N-w0C" firstAttribute="top" secondItem="aR6-c4-vAN" secondAttribute="topMargin" constant="12" id="dRz-IK-TdJ"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -1317,7 +1318,7 @@
         <image name="today" width="36" height="40"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="XoE-ck-qRf"/>
-        <segue reference="vH7-U6-gh3"/>
+        <segue reference="ZlX-X9-4ez"/>
+        <segue reference="Ity-bc-bUT"/>
     </inferredMetricsTieBreakers>
 </document>
