--- a/Appt/Base.lproj/Main.storyboard
+++ b/Appt/Base.lproj/Main.storyboard
@@ -275,7 +275,7 @@
                                                     <rect key="frame" x="16" y="12.5" width="343" height="17"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                                    <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done" textContentType="cc-number"/>
                                                 </textField>
                                             </subviews>
                                             <constraints>
@@ -296,19 +296,21 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="159.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Notes" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xmw-dK-onE">
-                                                    <rect key="frame" x="24" y="20" width="327" height="17"/>
-                                                    <nil key="textColor"/>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="jWG-nX-MpS">
+                                                    <rect key="frame" x="8" y="15" width="359" height="128"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
-                                                </textField>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences" spellCheckingType="yes" keyboardType="alphabet" enablesReturnKeyAutomatically="YES" textContentType="name"/>
+                                                </textView>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstItem="Xmw-dK-onE" firstAttribute="top" secondItem="xpo-tA-CdL" secondAttribute="topMargin" constant="12" id="7Hj-c6-Cs2"/>
-                                                <constraint firstItem="Xmw-dK-onE" firstAttribute="leading" secondItem="xpo-tA-CdL" secondAttribute="leadingMargin" constant="16" id="G5q-3V-mdq"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="Xmw-dK-onE" secondAttribute="trailing" constant="16" id="LDc-GQ-TiF"/>
-                                            </constraints>
                                         </tableViewCellContentView>
+                                        <constraints>
+                                            <constraint firstItem="jWG-nX-MpS" firstAttribute="centerX" secondItem="1go-bx-CZ0" secondAttribute="centerX" id="5bP-nV-wZi"/>
+                                            <constraint firstItem="jWG-nX-MpS" firstAttribute="top" secondItem="1go-bx-CZ0" secondAttribute="top" constant="15" id="Gyv-bj-AZ4"/>
+                                            <constraint firstAttribute="trailing" secondItem="jWG-nX-MpS" secondAttribute="trailing" constant="8" id="bgu-Zg-qw2"/>
+                                            <constraint firstAttribute="bottom" secondItem="jWG-nX-MpS" secondAttribute="bottom" constant="17" id="qV6-Z6-RPq"/>
+                                            <constraint firstItem="jWG-nX-MpS" firstAttribute="leading" secondItem="1go-bx-CZ0" secondAttribute="leading" constant="8" id="xdo-fR-9oV"/>
+                                        </constraints>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -334,7 +336,7 @@
                         <outlet property="costTextField" destination="mcx-0C-ghM" id="AQQ-Kj-hMN"/>
                         <outlet property="dateDetailLabel" destination="bH9-E4-eqE" id="vxM-xe-deF"/>
                         <outlet property="datePicker" destination="UyJ-Hb-pWS" id="6i1-0V-LaQ"/>
-                        <outlet property="notesTextField" destination="Xmw-dK-onE" id="JCD-s6-nbO"/>
+                        <outlet property="noteTextView" destination="jWG-nX-MpS" id="H1g-oZ-3Uc"/>
                         <outlet property="patientLabel" destination="5xa-7D-j1j" id="zcu-k1-QDo"/>
                     </connections>
                 </tableViewController>
@@ -969,7 +971,7 @@
                                                     <rect key="frame" x="16" y="12.5" width="343" height="17"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                                    <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" returnKeyType="done"/>
                                                 </textField>
                                             </subviews>
                                             <constraints>
@@ -990,19 +992,21 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="159.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Notes" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iKu-3N-w0C">
-                                                    <rect key="frame" x="16" y="20" width="335" height="17"/>
-                                                    <nil key="textColor"/>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TU1-Ko-LIS">
+                                                    <rect key="frame" x="8" y="15" width="359" height="128"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
-                                                </textField>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences" spellCheckingType="yes" keyboardType="alphabet" enablesReturnKeyAutomatically="YES" textContentType="name"/>
+                                                </textView>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailingMargin" secondItem="iKu-3N-w0C" secondAttribute="trailing" constant="16" id="4HL-lJ-ab5"/>
-                                                <constraint firstItem="iKu-3N-w0C" firstAttribute="leading" secondItem="aR6-c4-vAN" secondAttribute="leadingMargin" constant="8" id="PRc-s4-7Fd"/>
-                                                <constraint firstItem="iKu-3N-w0C" firstAttribute="top" secondItem="aR6-c4-vAN" secondAttribute="topMargin" constant="12" id="dRz-IK-TdJ"/>
-                                            </constraints>
                                         </tableViewCellContentView>
+                                        <constraints>
+                                            <constraint firstItem="TU1-Ko-LIS" firstAttribute="top" secondItem="sKQ-nO-lKF" secondAttribute="top" constant="15" id="89x-fK-nk2"/>
+                                            <constraint firstItem="TU1-Ko-LIS" firstAttribute="leading" secondItem="sKQ-nO-lKF" secondAttribute="leading" constant="8" id="aPw-7D-SDa"/>
+                                            <constraint firstItem="TU1-Ko-LIS" firstAttribute="centerX" secondItem="sKQ-nO-lKF" secondAttribute="centerX" id="eOo-Wm-Ok5"/>
+                                            <constraint firstAttribute="trailing" secondItem="TU1-Ko-LIS" secondAttribute="trailing" constant="8" id="hiP-8J-YPd"/>
+                                            <constraint firstAttribute="bottom" secondItem="TU1-Ko-LIS" secondAttribute="bottom" constant="17" id="po8-ku-izW"/>
+                                        </constraints>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -1029,7 +1033,7 @@
                         <outlet property="costTextField" destination="u13-u4-HZj" id="NQb-ab-3qY"/>
                         <outlet property="dateDetailLabel" destination="Bgl-y7-cyj" id="XRj-ns-Vem"/>
                         <outlet property="datePicker" destination="NiN-r6-10h" id="Kqv-Tb-AZX"/>
-                        <outlet property="notesTextField" destination="iKu-3N-w0C" id="CDr-aU-Ac5"/>
+                        <outlet property="noteTextView" destination="TU1-Ko-LIS" id="gn1-7f-iXh"/>
                         <outlet property="patientLabel" destination="tC3-av-2Id" id="6b2-RK-oEV"/>
                     </connections>
                 </tableViewController>
@@ -1122,7 +1126,7 @@
                                                     <rect key="frame" x="16" y="13" width="343" height="17"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="next" textContentType="name"/>
                                                 </textField>
                                             </subviews>
                                         </tableViewCellContentView>
@@ -1143,7 +1147,7 @@
                                                     <rect key="frame" x="16" y="13" width="343" height="17"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="next" textContentType="name"/>
                                                 </textField>
                                             </subviews>
                                         </tableViewCellContentView>
@@ -1168,7 +1172,7 @@
                                                     <rect key="frame" x="16" y="13.5" width="343" height="17"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                                    <textInputTraits key="textInputTraits" keyboardType="phonePad" returnKeyType="next" smartDashesType="yes" textContentType="tel"/>
                                                 </textField>
                                             </subviews>
                                         </tableViewCellContentView>
@@ -1189,7 +1193,7 @@
                                                     <rect key="frame" x="16" y="13.5" width="343" height="17"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                                    <textInputTraits key="textInputTraits" keyboardType="phonePad" returnKeyType="next" smartDashesType="yes" textContentType="tel"/>
                                                 </textField>
                                             </subviews>
                                         </tableViewCellContentView>
@@ -1214,7 +1218,7 @@
                                                     <rect key="frame" x="16" y="12.5" width="343" height="17"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
+                                                    <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="continue" textContentType="email"/>
                                                 </textField>
                                             </subviews>
                                         </tableViewCellContentView>
@@ -1318,7 +1322,7 @@
         <image name="today" width="36" height="40"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ZlX-X9-4ez"/>
         <segue reference="Ity-bc-bUT"/>
+        <segue reference="fIu-1r-FSG"/>
     </inferredMetricsTieBreakers>
 </document>
